<resources>
    <string name="app_name">纯净待办</string>
    <string name="add_task">新的待办项目</string>
    <string name="edit_task">编辑待办项目</string>
    <string name="task_marked_complete">完成一个待办项目</string>
    <string name="task_marked_active">激活一个待办项目</string>
    <string name="task_to_delete">确定要删除这个待办项目吗?</string>
    <string name="loading_tasks_error">加载待办项目列表错误</string>
    <string name="completed_tasks_cleared">成功删除已完成项目</string>
    <string name="menu_filter">过滤器</string>
    <string name="menu_clear">删除已完成项目</string>
    <string name="menu_delete_task">删除项目</string>
    <string name="navigation_view_header_title">待办项目列表</string>
    <string name="title_hint">标题</string>
    <string name="description_hint">待办项目内容</string>
    <string name="empty_task_message">待办项目不能为空</string>
    <string name="successfully_saved_task_message">成功保存待办项目</string>
    <string name="list_title">待办项目列表</string>
    <string name="statistics_title">统计</string>
    <string name="statistics_no_tasks">没有待办项目</string>
    <string name="statistics_active_tasks">未完成的项目:</string>
    <string name="statistics_completed_tasks">已完成的项目:</string>
    <string name="statistics_error">加载统计信息错误.</string>
    <string name="no_data">没有数据</string>
    <string name="loading">加载中...</string>
    <string name="ok">确定</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>

    <string name="nav_all">显示所有项目</string>
    <string name="nav_active">显示未完成项目</string>
    <string name="nav_completed">显示已完成项目</string>
    <string name="label_all">所有待办项目</string>
    <string name="label_active">未完成项目</string>
    <string name="label_completed">已完成项目</string>
    <string name="no_tasks_all">没有待办项目!</string>
    <string name="no_tasks_active">没有未完成的项目!</string>
    <string name="no_tasks_completed">没有已完成的项目!</string>
    <string name="no_tasks_add">增加一个待办项目 +</string>
    <string name="refresh">刷新</string>

    <string name="about">关于</string>
    <string name="about_introduce">「纯净待办」- 给您最纯粹的待办体验。\n\n纯净待办是一款纯净简洁、高效易用的待办项目管理器。采用极简风格和Material Design设计，无广告无权限，回归待办应用的本质，一切从心开始。\n\n版本V1.1增加了桌面小部件功能，默认长宽最小为2x1，可自由调整大小。这个桌面插件做的比较久，主要是要保证做得纯净美观，简洁易用，让大家喜欢。欢迎大家提出意见和建议。\n\n版本V1.0只有最基本的功能，更多功能正在按照计划开发中\n\n开源是必须的，软件采用MVP框架实现，喜欢的朋友请给个5星好评或者Star项目，欢迎一起学习讨论。你的支持将是我最大的动力！\n\n项目地址：\nhttps://github.com/laucherish/PureToDo</string>
    <string name="about_menu_action_share">分享</string>
    <string name="about_app_name_with_introduce">纯净待办 - 最纯粹的待办应用</string>
    <string name="about_developers">开发者</string>
    <string name="about_introduce_and_help">介绍</string>
    <string name="about_function">功能计划(开发中...)</string>
    <string name="about_function_list">* 定时提醒\n* 夜间模式\n* 自选主题</string>
    <string name="about_version">Version 1.0</string>

</resources>
